--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Alaska-999",
   "license": "ISC"
 }
